--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,24 @@
 html {
     scroll-behavior: smooth;
-    margin: 0;
-    padding: 0;
+    margin: 0; padding: 0;
     overflow-x: hidden; /* Prevents horizontal scroll */
 }
 
 body{
-    margin: 0;
-    padding: 0%;
-    height: 100%;
-    width: 100%;
+    margin: 0; padding: 0%;
+    height: 100%; width: 100%;
 
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #fffffc;
+    color: #00171f;
 }
 
 main{
-    text-align: center;
-    align-items: center;
+    text-align: center; align-items: center;
 
     /* Flex */
     display: flex; 
-    /* Column: spaced vertically / Elements travel on y-axis and not x-axis */
-    flex-direction: column; 
+    flex-direction: column;     /* Column: spaced vertically / Elements travel on y-axis and not x-axis */
     /* flex-direction: row; */  /* Column: spaced horizontally / Elements travel on x-axis */ 
 
 }
@@ -29,17 +26,14 @@ main{
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: center; align-items: center;
 
     height: 80vh;
-
     row-gap: 30px;
 }
 
 #urlBox{
-    border: 1px solid black;
-    border-radius: 10px;
+    border: 1px solid black; border-radius: 10px;
     
     display: flex;
     flex-direction: row !important;
@@ -47,7 +41,6 @@ main{
 
     padding: 20px;
 
-    /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); */
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.9);
 
     transition: all 0.3s ease-in-out;
@@ -55,19 +48,12 @@ main{
 
 #urlBox:hover{
     box-shadow: 0px 15px 1px rgba(0, 0, 0, 1.0);
-
-    transition: all 0.2s ease-in-out;
 }
 
 #inputURL{
     border: 4px dashed rgb(0, 0, 31);
     border-radius: 5px;
 }
-
-/* #convertBTN{
-    background-image: url("Assets/svg/cnvBTN.svg");
-    width: 200px; height: 200px;
-} */
 
 .convertBTN{
     background-image: url("Assets/svg/cnvBTN.svg");
@@ -77,21 +63,20 @@ main{
 
     border: none;
     cursor: pointer;
-    background-color: white;
-    /* background:none; */
+    background-color: white; background-color: #fffffc;
 
     transform: scale(1,1);
+
+    color: #FFFFFF;
+    transform: translateX(0px);
 }
 .convertBTN:hover{
     background-image: url("Assets/svg/cnvBTN.svg");
     width: 200px; height: 100px;
 
-    /* transition-duration: 0.4s; */
-
     border: none;
     cursor: pointer;
-    background-color: white;
-    /* background:none; */
+    background-color: white; background-color: #fffffc;
 
     transform: scale(1.1,1.1);
 }
