--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ main{
 }
 
 .convertBTN{
-    background-image: url("Assets/svg/cnvBTN.svg");
+    /* background-image: url("Assets/svg/cnvBTN.svg"); */
     width: 200px; height: 100px;
 
     transition-duration: 0.4s;
@@ -71,7 +71,7 @@ main{
     transform: translateX(0px);
 }
 .convertBTN:hover{
-    background-image: url("Assets/svg/cnvBTN.svg");
+    /* background-image: url("Assets/svg/cnvBTN.svg"); */
     width: 200px; height: 100px;
 
     border: none;
@@ -79,6 +79,18 @@ main{
     background-color: white; background-color: #fffffc;
 
     transform: scale(1.1,1.1);
+    /* filter: drop-shadow(30px 10px 4px #4444dd); */
+    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.5));
+    
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Space between text and SVG */
+    padding: 10px 20px;
+    background: white;
+
+}
+.convertBTN:hover .arrow {
+    filter: url(#arrowShadow); /* Shadow only on the arrow */
 }
 
 footer{
