--- a/styles.css
+++ b/styles.css
@@ -56,41 +56,44 @@ main{
 }
 
 .convertBTN{
-    /* background-image: url("Assets/svg/cnvBTN.svg"); */
     width: 200px; height: 100px;
 
-    transition-duration: 0.4s;
+    transition: all 0.3s ease-in-out;
 
-    border: none;
     cursor: pointer;
-    background-color: white; background-color: #fffffc;
+    background: none; border: none;
 
     transform: scale(1,1);
 
-    color: #FFFFFF;
-    transform: translateX(0px);
+    /* color: #FFFFFF; */
 }
 .convertBTN:hover{
-    /* background-image: url("Assets/svg/cnvBTN.svg"); */
     width: 200px; height: 100px;
 
     border: none;
     cursor: pointer;
-    background-color: white; background-color: #fffffc;
-
-    transform: scale(1.1,1.1);
-    /* filter: drop-shadow(30px 10px 4px #4444dd); */
-    filter: drop-shadow(2px 2px 3px rgba(0, 0, 0, 0.5));
     
-    display: flex;
-    align-items: center;
-    gap: 10px; /* Space between text and SVG */
-    padding: 10px 20px;
-    background: white;
-
+    transform: scale(1.1,1.1);
 }
-.convertBTN:hover .arrow {
-    filter: url(#arrowShadow); /* Shadow only on the arrow */
+
+.convertBTN svg{
+    transition: all 0.3s ease-in-out;
+    filter: none;
+    filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 1.0));
+}
+
+.convertBTN:hover svg {
+    filter: drop-shadow(0px 10px 1px rgba(0, 0, 0, 1.0));
+    /* transform: rotateX(180deg); */
+    transform: rotateZ(10deg);
+}
+
+.convertBTN text{
+    fill: white;
+    font-weight: bold;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+    pointer-events: none;
 }
 
 footer{
