--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ main{
     justify-content: center; align-items: center;
 
     height: 80vh;
-    row-gap: 30px;
+    row-gap: 30px; row-gap: 50px;
 }
 
 #urlBox{
@@ -92,11 +92,20 @@ main{
     fill: white;
     font-weight: bold;
     font-family: Arial, sans-serif;
-    font-size: 16px;
+    font-size: 16px; font-size: 2rem;
     pointer-events: none;
+}
+
+.preview-animated {
+    animation: slideInRight 0.5s forwards;
 }
 
 footer{
     text-align: center;
     align-items: center;
+}
+
+@keyframes slideInRight{
+    from {transform: translateX(-100%);}
+    to { transform: translateX(0%); }
 }
